--- a/src/1_molecules/Accordeon.astro
+++ b/src/1_molecules/Accordeon.astro
@@ -2,6 +2,7 @@
 import PrimaryCardAccordeon from './accordeon/PrimaryCardAccordeon.svelte';
 import type { StoryblokAccordeon } from './_dto/AccordeonDTO.astro';
 import { getClassName, getPaddingXClasses, getPaddingYClasses, getVisibilityClasses } from '../tailwind/class_name_compiler';
+import NavigationAccordeon from './accordeon/NavigationAccordeon.svelte';
 
 interface Props {
     blok: StoryblokAccordeon;
@@ -31,4 +32,19 @@ const className = getClassName(blok, {
         <slot name="content" />
     </Fragment>
 </PrimaryCardAccordeon>
+) : null }
+
+{blok.type == 'navigation' ? (
+<NavigationAccordeon 
+    className={className} 
+    storyblokEditableData={blok.storyblokData} 
+    client:idle
+>
+    <Fragment slot="title">
+        <slot name="title" />
+    </Fragment>
+    <Fragment slot="content">
+        <slot name="content" />
+    </Fragment>
+</NavigationAccordeon>
 ) : null }
