add google analytics

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,6 +8,8 @@ import '@fontsource/inter/latin-500.css';
 import '@fortawesome/fontawesome-free/css/fontawesome.min.css';
 import '@fortawesome/fontawesome-free/css/solid.min.css';
 import '@fortawesome/fontawesome-free/css/brands.min.css';
+import GoogleAnalytics from "./0_functional_components/GoogleAnalytics.astro";
+import Favicons from "./0_functional_components/Favicons.astro";
 
 const storyblokApi = useStoryblokApi()
 const response = await storyblokApi.get('cdn/stories/settings/base-layout', {
@@ -33,13 +35,8 @@ const { title, description, keywords } = Astro.props;
 		<meta name="description" content={description}>
 		<meta name="keywords" content={keywords}>
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#e1b653">
-		<meta name="theme-color" content="#ffffff">
+		<Favicons />	
+		<GoogleAnalytics id={import.meta.env.GOOGLE_ANALYTICS_ID} />
 
 		<ViewTransitions />
 	</head>
